@@ -173,3 +173,4 @@ version 2.8.1:
 	* R447: Updated Documentation (Authors, Copyright, Dependencies)
 	* R448: Updated German translation.
 	* R450: Bugfix Preview Print: Don't delete preview files too early
+	* R451: Lilypond instrument name is now exported in UTF8 encoding
